adding hover color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ th {
 }
 
 .sort-controls:hover {
-  color: #333; /* Highlight on hover for better user experience */
+  color: #f15922; /* Highlight on hover for better user experience */
 }
 
 
